# NeuralNetwork

./: .gitignore  CMakeLists.txt  README.md  main.cpp
app/: CMakeLists.txt
include/neural_net/: network.hpp
src/: CMakeLists.txt  activation.hpp  network.cpp
tests/: CMakeLists.txt  test_network.cpp
xor_learner/: CMakeLists.txt  xor_learner.cpp
